--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-/images
-/batchinprogress
-/batchprocessed
-/temp
-
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -53,3 +48,4 @@ coverage.xml
 
 # Sphinx documentation
 docs/_build/
+.gitignore
