Add domain to sample file

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,5 @@
 APP_PATH=/path/to/root/ocr/
+DOMAIN=https://ocr.idiginfo.org
 PYTHON_PATH=${APP_PATH}/venv/bin/python
 LOG_PATH=${APP_PATH}/logs
 WTF_CSRF_ENABLED=True
